--- a/form.html
+++ b/form.html
@@ -9,9 +9,9 @@
 		<meta name="keywords" content="Natural Language UI, sentence form, text input, contenteditable, html5, css3, jquery" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico"> 
-		<link rel="stylesheet" type="text/css" href="css/default.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		<script src="js/modernizr.custom.js"></script>
+		<link rel="stylesheet" type="text/css" href="formcss/default.css" />
+		<link rel="stylesheet" type="text/css" href="formcss/component.css" />
+		<script src="formjs/modernizr.custom.js"></script>
 	</head>
 	<body class="nl-blurred">
 		<div class="container demo-1">
@@ -57,7 +57,7 @@
 				</form>
 			</div>
 		</div><!-- /container -->
-		<script src="js/nlform.js"></script>
+		<script src="formjs/nlform.js"></script>
 		<script>
 			var nlform = new NLForm( document.getElementById( 'nl-form' ) );
 		</script>
