I do not own these files, they belong to their rightful owner. No copyright infringement intended.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="buttoncss/demo.css" />
-	<link rel="stylesheet" type="text/css" href="buttoncss/component.css" />
-	<script src="buttonjs/modernizr.custom.js"></script>
-	<link rel="stylesheet" type="text/css" href="formcss/default.css" />
-		<link rel="stylesheet" type="text/css" href="formcss/component.css" />
-		<!--<script src="formjs/modernizr.custom.js"></script>-->
+	<link rel="stylesheet" type="text/css" href="css/buttondemo.css" />
+	<link rel="stylesheet" type="text/css" href="css/buttoncomponent.css" />
+	<script src="js/buttonmodernizr.custom.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/formdefault.css" />
+	<link rel="stylesheet" type="text/css" href="css/formcomponent.css" />
+
   	
 	<title>Presentation Slideshow | CodyHouse</title>
 </head>
@@ -94,8 +94,8 @@
 <script src="js/jquery-2.1.4.js"></script>
 <script src="js/jquery.mobile.custom.min.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
-<script src="buttonjs/classie.js"></script>
-		<script src="buttonjs/uiProgressButton.js"></script>
+<script src="js/buttonclassie.js"></script>
+		<script src="js/buttonuiProgressButton.js"></script>
 		<script>
 			[].slice.call( document.querySelectorAll( '.progress-button' ) ).forEach( function( bttn, pos ) {
 				new UIProgressButton( bttn, {
@@ -114,7 +114,7 @@
 				} );
 			} );
 		</script>
-<script src="formjs/nlform.js"></script>
+<script src="js/nlform.js"></script>
 		<script>
 			var nlform = new NLForm( document.getElementById( 'nl-form' ) );
 		</script>
