--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 	<link rel="stylesheet" type="text/css" href="css/buttondemo.css" />
 	<link rel="stylesheet" type="text/css" href="css/buttoncomponent.css" />
 	<script src="js/buttonmodernizr.custom.js"></script>
+
 	<link rel="stylesheet" type="text/css" href="css/formdefault.css" />
 	<link rel="stylesheet" type="text/css" href="css/formcomponent.css" />
 
+	<link rel="stylesheet" type="text/css" href="css/general.css" />
+
   	
-	<title>Presentation Slideshow | CodyHouse</title>
+	<title>Lyricist | ZKD</title>
 </head>
 <body>
 	<div class="cd-slideshow-wrapper">
-		
 		<ol class="cd-slideshow">
-			
-
 			<li id="slide-2">
 				<ol class="sub-slides">
 					<li>
@@ -42,13 +44,11 @@
 										<div class="nl-overlay"></div>
 									</form>
 								</div>
-												<span class="input input--hoshi">
+									<span class="input input--hoshi">
 									<input class="input__field input__field--hoshi" type="text" id="input-4" />
-									<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4">
-										
-									</label>
+									<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4"></label>
 								</span>
-								 <div class="progress-button">
+								<div class="progress-button">
 									<button><span>Next</span></button>
 									<svg class="progress-circle" width="70" height="70"><path d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"/></svg>
 									<svg class="checkmark" width="70" height="70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg>
