Axels changeAxels changess

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+	<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/buttondemo.css" />
 	<link rel="stylesheet" type="text/css" href="css/buttoncomponent.css" />
@@ -20,7 +21,7 @@
   	
 	<title>Presentation Slideshow | CodyHouse</title>
 </head>
-<body>
+<body id="boody">
 	<div class="cd-slideshow-wrapper">
 		
 		<ol class="cd-slideshow">
@@ -196,5 +197,6 @@ if ( typeof define === 'function' && define.amd ) {
 
 })( window );
 </script>
+<script src="js/hammer.min.js"></script>
 </body>
 </html>
