--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
 								<div class="main clearfix">
-									<form id="nl-form" class="nl-form">
-										But that thing went bust<br/>
+									<p class="lyrics">
+										But that thing went bust<br />
 										So I gave it up<br />
 										No tricks no bluff<br />
 										I’m just better off without them<br />
 										<span class="boxcover">-----</span>.
-										
-										<div class="nl-overlay"></div>
-									</form>
+									</p>
 								</div>
-									<span class="input input--hoshi">
+
+								<span class="input input--hoshi">
 									<input class="input__field input__field--hoshi" type="text" id="input-4" />
 									<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4"></label>
-								</span>
+								</span><br/ >
+								
 								<div class="progress-button">
 									<button><span>Next</span></button>
 									<svg class="progress-circle" width="70" height="70"><path d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"/></svg>
