--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,8 @@
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
 								<div class="main clearfix">
+									<h2>Lush Life</h2>
+									<h3>Zara Larsson</h3>
 									<p class="lyrics">
 										But that thing went bust<br/>
 										So I gave it up<br />
