--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,9 @@
 	<title>Lyricist | ZKD</title>
 </head>
 <body id="boody">
+
 	<div class="cd-slideshow-wrapper">
+
 		<ol class="cd-slideshow">
 			<li id="slide-2">
 				<ol class="sub-slides">
@@ -35,6 +37,7 @@
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
 								<div class="main clearfix">
+								<p>test</p>
 									<form id="nl-form" class="nl-form">
 										But that thing went bust<br/>
 										So I gave it up<br />
@@ -46,8 +49,8 @@
 									</form>
 								</div>
 									<span class="input input--hoshi">
-									<input class="input__field input__field--hoshi" type="text" id="input-4" />
-									<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4"></label>
+									<input style="font-size:22px !important; color: black;" class="input__field input__field--hoshi" type="text" id="input-4" />
+									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span>
 								<div class="progress-button">
 									<button><span>Next</span></button>
