--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -69,6 +69,8 @@
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
 								<div class="main clearfix">
+									<h2>Panda</h2>
+									<h3>Desiigner</h3>
 									<p class="lyrics">
 										Panda, panda, panda, panda, panda,<br/>
 										<span class="boxcover">-----</span>
@@ -95,6 +97,8 @@
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
 								<div class="main clearfix">
+									<h2>Some Coldplay Song</h2>
+									<h3>Coldplay</h3>
 									<p class="lyrics">
 										When I was a river dried up<br/>
 										You came to rain a flood <br/>
