cleaned up code

--- a/www/index.html
+++ b/www/index.html
@@ -26,34 +26,28 @@
   	
 	<title>Lyricist | ZKD</title>
 </head>
-<body id="boody">
-
+<body id="css-override">
 	<div class="cd-slideshow-wrapper">
-
 		<ol class="cd-slideshow">
 			<li id="slide-2">
 				<ol class="sub-slides">
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
-								<div class="main clearfix">
-								<p>test</p>
+								<h2>Lush Life</h2>
+								<h3>Zara Larsson</h3>
+								<p class="lyrics">
+									But that thing went bust<br/>
+									So I gave it up<br />
+									No tricks no bluff<br />
+									I’m just better off without them<br />
+									<span class="boxcover">-----</span>.
+								</p>
 
-									<h2>Lush Life</h2>
-									<h3>Zara Larsson</h3>
-									<p class="lyrics">
-
-										But that thing went bust<br/>
-										So I gave it up<br />
-										No tricks no bluff<br />
-										I’m just better off without them<br />
-										<span class="boxcover">-----</span>.
-									</p>
-								</div>
-									<span class="input input--hoshi">
+								<span class="input input--hoshi">
 									<input style="font-size:22px !important; color: black;" class="input__field input__field--hoshi" type="text" id="input-4" />
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
-								</span>
+								</span><br/>
 
 								<div class="progress-button">
 									<button onclick="app.playSong('lushlife.mp3')"><span>Next</span></button>
@@ -68,13 +62,11 @@
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
-								<div class="main clearfix">
-									<p class="lyrics">
-										Panda, panda, panda, panda, panda,<br/>
-										<span class="boxcover">-----</span>
-										panda, panda, panda.
-									</p>
-								</div>
+								<p class="lyrics">
+									Panda, panda, panda, panda, panda,<br/>
+									<span class="boxcover">-----</span>
+									panda, panda, panda.
+								</p>
 
 								<span class="input input--hoshi">
 									<input class="input__field input__field--hoshi" type="text" id="input-4" />
@@ -94,13 +86,11 @@
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
-								<div class="main clearfix">
-									<p class="lyrics">
-										When I was a river dried up<br/>
-										You came to rain a flood <br/>
-										So <span class="boxcover">-----</span>.
-									</p>
-								</div>
+								<p class="lyrics">
+									When I was a river dried up<br/>
+									You came to rain a flood <br/>
+									So <span class="boxcover">-----</span>.
+								</p>
 								
 								<span class="input input--hoshi">
 									<input class="input__field input__field--hoshi" type="text" id="input-4" />
