added song titles

--- a/www/index.html
+++ b/www/index.html
@@ -61,6 +61,8 @@
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
+								<h2>Panda</h2>
+								<h3>Desiigner</h3>
 								<p class="lyrics">
 									Panda, panda, panda, panda, panda,<br/>
 									<span class="boxcover">-----</span>
@@ -85,6 +87,8 @@
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
+								<h2>Hymn For the Weekend</h2>
+								<h3>Coldplay</h3>
 								<p class="lyrics">
 									When I was a river dried up<br/>
 									You came to rain a flood <br/>
