fixed margins and sizing

--- a/www/index.html
+++ b/www/index.html
@@ -39,12 +39,12 @@
 									But that thing went bust<br/>
 									So I gave it up<br />
 									No tricks no bluff<br />
-									I’m just better off without them<br />
-									<span class="boxcover">-----</span>.
+									I’m just better off<br />
+									without them <span class="boxcover">-----</span>.
 								</p>
 
 								<span class="input input--hoshi">
-									<input style="font-size:22px !important; color: black;" class="input__field input__field--hoshi" type="text" id="input-4" />
+									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
@@ -61,20 +61,17 @@
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
-								<div class="main clearfix">
-									<h2>Panda</h2>
-									<h3>Desiigner</h3>
-									<p class="lyrics">
-										Panda, panda, panda, panda, panda,<br/>
-										<span class="boxcover">-----</span>
-										panda, panda, panda.
-									</p>
-								</div>
-
+								<h2>Panda</h2>
+								<h3>Desiigner</h3>
+								<p class="lyrics">
+									Panda, panda, panda, panda, panda,<br/>
+									<span class="boxcover">-----</span>
+									panda, panda, panda.
+								</p>
 
 								<span class="input input--hoshi">
-									<input class="input__field input__field--hoshi" type="text" id="input-4" />
-									<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4"></label>
+									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
+									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
 								<div class="progress-button">
@@ -90,20 +87,17 @@
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
-								<div class="main clearfix">
-									<h2>Some Coldplay Song</h2>
-									<h3>Coldplay</h3>
-									<p class="lyrics">
-										When I was a river dried up<br/>
-										You came to rain a flood <br/>
-										So <span class="boxcover">-----</span>.
-									</p>
-								</div>
-
-								
+								<h2>Some Coldplay Song</h2>
+								<h3>Coldplay</h3>
+								<p class="lyrics">
+									When I was a river dried up<br/>
+									You came to rain a flood <br/>
+									So <span class="boxcover">-----</span>.
+								</p>
+							
 								<span class="input input--hoshi">
-									<input class="input__field input__field--hoshi" type="text" id="input-4" />
-									<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4"></label>
+									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
+									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
 								<div class="progress-button">
