added cover art

--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
 				<ol class="sub-slides">
 					<li>
 						<div class="cd-slider-content">
-							<div class="content-wrapper">
+							<div class="content-wrapper artist1">
 								<h2>Lush Life</h2>
 								<h3>Zara Larsson</h3>
 								<p class="lyrics">
@@ -60,7 +60,7 @@
 
 					<li>
 						<div class="cd-slider-content">
-							<div class="content-wrapper">
+							<div class="content-wrapper artist2">
 								<h2>Panda</h2>
 								<h3>Desiigner</h3>
 								<p class="lyrics">
@@ -86,8 +86,8 @@
 
 					<li>
 						<div class="cd-slider-content">
-							<div class="content-wrapper">
-								<h2>Some Coldplay Song</h2>
+							<div class="content-wrapper artist3">
+								<h2>Hymn For the Weekend</h2>
 								<h3>Coldplay</h3>
 								<p class="lyrics">
 									When I was a river dried up<br/>
