input color, panda alignment

--- a/www/index.html
+++ b/www/index.html
@@ -64,8 +64,8 @@
 								<h2>Panda</h2>
 								<h3>Desiigner</h3>
 								<p class="lyrics">
-									Panda, panda, panda, panda, panda,<br/>
-									<span class="boxcover">-----</span>
+									Panda, panda, panda,<br/>
+									panda, panda, <span class="boxcover">-----</span>,<br/>
 									panda, panda, panda.
 								</p>
 
