--- a/www/index.html
+++ b/www/index.html
@@ -35,13 +35,12 @@
 							<div class="content-wrapper">
 								<h2>Lush Life</h2>
 								<h3>Zara Larsson</h3>
-								<p class="lyrics">
-									But that thing went bust<br/>
-									So I gave it up<br />
-									No tricks no bluff<br />
-									I’m just better off without them<br />
-									<span class="boxcover">-----</span>.
-								</p>
+								<div class="lyrics" id="zara" song="LushLife">
+									<div time="500">But that thing went bust</div>
+									<div time="700">So I gave it up</div>
+									<div time="800">No tricks no bluff</div>
+									<div time="3000">I’m just better off without them <span class="boxcover">-----</span>.</div>
+								</div>
 
 								<span class="input input--hoshi">
 									<input style="font-size:22px !important; color: black;" class="input__field input__field--hoshi" type="text" id="input-4" />
@@ -63,11 +62,11 @@
 							<div class="content-wrapper">
 								<h2>Panda</h2>
 								<h3>Desiigner</h3>
-								<p class="lyrics">
-									Panda, panda, panda, panda, panda,<br/>
-									<span class="boxcover">-----</span>
-									panda, panda, panda.
-								</p>
+								<div class="lyrics">
+									<div time="200">Panda, panda, panda, panda, panda,</div>
+									<div time="500"><span class="boxcover">-----</span></div>
+									<div time="600">panda, panda, panda.</div>
+								</div>
 
 								<span class="input input--hoshi">
 									<input class="input__field input__field--hoshi" type="text" id="input-4" />
@@ -89,11 +88,11 @@
 							<div class="content-wrapper">
 								<h2>Hymn For the Weekend</h2>
 								<h3>Coldplay</h3>
-								<p class="lyrics">
-									When I was a river dried up<br/>
-									You came to rain a flood <br/>
-									So <span class="boxcover">-----</span>.
-								</p>
+								<div class="lyrics">
+									<div>When I was a river dried up</div>
+									<div>You came to rain a flood</div>
+									<div>So <span class="boxcover">-----</span>.</div>
+								</div>
 								
 								<span class="input input--hoshi">
 									<input class="input__field input__field--hoshi" type="text" id="input-4" />
