--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -11,7 +11,6 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
-	<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/buttondemo.css" />
@@ -26,37 +25,31 @@
   	
 	<title>Lyricist | ZKD</title>
 </head>
-<body id="boody">
-
+<body id="css-override">
 	<div class="cd-slideshow-wrapper">
-
 		<ol class="cd-slideshow">
 			<li id="slide-2">
 				<ol class="sub-slides">
 					<li>
 						<div class="cd-slider-content">
-							<div class="content-wrapper">
-								<div class="main clearfix">
-								<p>test</p>
+							<div class="content-wrapper artist1">
+								<h2>Lush Life</h2>
+								<h3>Zara Larsson</h3>
+								<p class="lyrics">
+									But that thing went bust<br/>
+									So I gave it up<br />
+									No tricks no bluff<br />
+									I’m just better off<br />
+									without them <span class="boxcover">-----</span>.
+								</p>
 
-									<h2>Lush Life</h2>
-									<h3>Zara Larsson</h3>
-									<p class="lyrics">
-
-										But that thing went bust<br/>
-										So I gave it up<br />
-										No tricks no bluff<br />
-										I’m just better off without them<br />
-										<span class="boxcover">-----</span>.
-									</p>
-								</div>
-									<span class="input input--hoshi">
-									<input style="font-size:22px !important; color: black;" class="input__field input__field--hoshi" type="text" id="input-4" />
+								<span class="input input--hoshi">
+									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
-								</span>
+								</span><br/>
 
 								<div class="progress-button">
-									<button><span>Next</span></button>
+									<button onclick="app.playSong('post/LushLifePost.mp3'); $(this).parents('.cd-slider-content').trigger('swipeleft'); app.playSong('pre/PandaPre.mp3');"><span>Next</span></button>
 									<svg class="progress-circle" width="70" height="70"><path d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"/></svg>
 									<svg class="checkmark" width="70" height="70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg>
 									<svg class="cross" width="70" height="70"><path d="m35,35l-9.3,-9.3"/><path d="m35,35l9.3,9.3"/><path d="m35,35l-9.3,9.3"/><path d="m35,35l9.3,-9.3"/></svg>
@@ -67,20 +60,18 @@
 
 					<li>
 						<div class="cd-slider-content">
-							<div class="content-wrapper">
-								<div class="main clearfix">
-									<h2>Panda</h2>
-									<h3>Desiigner</h3>
-									<p class="lyrics">
-										Panda, panda, panda, panda, panda,<br/>
-										<span class="boxcover">-----</span>
-										panda, panda, panda.
-									</p>
-								</div>
+							<div class="content-wrapper artist2">
+								<h2>Panda</h2>
+								<h3>Desiigner</h3>
+								<p class="lyrics">
+									Panda, panda, panda,<br/>
+									panda, panda, <span class="boxcover">-----</span>,<br/>
+									panda, panda, panda.
+								</p>
 
 								<span class="input input--hoshi">
-									<input class="input__field input__field--hoshi" type="text" id="input-4" />
-									<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4"></label>
+									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
+									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
 								<div class="progress-button">
@@ -95,20 +86,18 @@
 
 					<li>
 						<div class="cd-slider-content">
-							<div class="content-wrapper">
-								<div class="main clearfix">
-									<h2>Some Coldplay Song</h2>
-									<h3>Coldplay</h3>
-									<p class="lyrics">
-										When I was a river dried up<br/>
-										You came to rain a flood <br/>
-										So <span class="boxcover">-----</span>.
-									</p>
-								</div>
-								
+							<div class="content-wrapper artist3">
+								<h2>Hymn For the Weekend</h2>
+								<h3>Coldplay</h3>
+								<p class="lyrics">
+									When I was a river dried up<br/>
+									You came to rain a flood <br/>
+									So <span class="boxcover">-----</span>.
+								</p>
+							
 								<span class="input input--hoshi">
-									<input class="input__field input__field--hoshi" type="text" id="input-4" />
-									<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4"></label>
+									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
+									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
 								<div class="progress-button">
@@ -129,119 +118,36 @@
 		</ol> <!-- .cd-slideshow -->
 	</div> <!-- .cd-slideshow-wrapper -->
 	
-<script src="js/jquery-2.1.4.js"></script>
-<script src="js/jquery.mobile.custom.min.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
-<script src="js/buttonclassie.js"></script>
-<script type="text/javascript" src="cordova.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
-<script type="text/javascript">
-app.initialize();
-</script>
-		<script src="js/buttonuiProgressButton.js"></script>
-		<script>
-			[].slice.call( document.querySelectorAll( '.progress-button' ) ).forEach( function( bttn, pos ) {
-				new UIProgressButton( bttn, {
-					callback : function( instance ) {
-						var progress = 0,
-							interval = setInterval( function() {
-								progress = Math.min( progress + Math.random() * 99, 1 );
-								instance.setProgress( progress );
+	<script src="js/jquery-2.1.4.js"></script>
+	<script src="js/jquery.mobile.custom.min.js"></script>
+	<script src="js/main.js"></script> <!-- Resource jQuery -->
+	<script src="js/buttonclassie.js"></script>
+	<script type="text/javascript" src="cordova.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript"> app.initialize(); </script>
+	<script src="js/buttonuiProgressButton.js"></script>
+	<script>
+		[].slice.call( document.querySelectorAll( '.progress-button' ) ).forEach( function( bttn, pos ) {
+			new UIProgressButton( bttn, {
+				callback : function( instance ) {
+					var progress = 0,
+						interval = setInterval( function() {
+							progress = Math.min( progress + Math.random() * 99, 1 );
+							instance.setProgress( progress );
 
-								if( progress === 1 ) {
-									instance.stop( pos === 1 || pos === 3 ? -1 : 1 );
-									clearInterval( interval );
-								}
-							}, 150 );
-					}
-				} );
+							if( progress === 1 ) {
+								instance.stop( pos === 1 || pos === 3 ? -1 : 1 );
+								clearInterval( interval );
+							}
+						}, 150 );
+				}
 			} );
-		</script>
-<script src="js/nlform.js"></script>
-		<script>
-			var nlform = new NLForm( document.getElementById( 'nl-form' ) );
-		</script>
-		<script>/*!
- * classie - class helper functions
- * from bonzo https://github.com/ded/bonzo
- * 
- * classie.has( elem, 'my-class' ) -> true/false
- * classie.add( elem, 'my-new-class' )
- * classie.remove( elem, 'my-unwanted-class' )
- * classie.toggle( elem, 'my-class' )
- */
-
-/*jshint browser: true, strict: true, undef: true */
-/*global define: false */
-
-( function( window ) {
-
-'use strict';
-
-// class helper functions from bonzo https://github.com/ded/bonzo
-
-function classReg( className ) {
-  return new RegExp("(^|\\s+)" + className + "(\\s+|$)");
-}
-
-// classList support for class management
-// altho to be fair, the api sucks because it won't accept multiple classes at once
-var hasClass, addClass, removeClass;
-
-if ( 'classList' in document.documentElement ) {
-  hasClass = function( elem, c ) {
-    return elem.classList.contains( c );
-  };
-  addClass = function( elem, c ) {
-    elem.classList.add( c );
-  };
-  removeClass = function( elem, c ) {
-    elem.classList.remove( c );
-  };
-}
-else {
-  hasClass = function( elem, c ) {
-    return classReg( c ).test( elem.className );
-  };
-  addClass = function( elem, c ) {
-    if ( !hasClass( elem, c ) ) {
-      elem.className = elem.className + ' ' + c;
-    }
-  };
-  removeClass = function( elem, c ) {
-    elem.className = elem.className.replace( classReg( c ), ' ' );
-  };
-}
-
-function toggleClass( elem, c ) {
-  var fn = hasClass( elem, c ) ? removeClass : addClass;
-  fn( elem, c );
-}
-
-var classie = {
-  // full names
-  hasClass: hasClass,
-  addClass: addClass,
-  removeClass: removeClass,
-  toggleClass: toggleClass,
-  // short names
-  has: hasClass,
-  add: addClass,
-  remove: removeClass,
-  toggle: toggleClass
-};
-
-// transport
-if ( typeof define === 'function' && define.amd ) {
-  // AMD
-  define( classie );
-} else {
-  // browser global
-  window.classie = classie;
-}
-
-})( window );
-</script>
-<script src="js/hammer.min.js"></script>
+		} );
+	</script>
+	<script src="js/nlform.js"></script>
+	<script>
+		var nlform = new NLForm( document.getElementById( 'nl-form' ) );
+	</script>
+	<script src="js/hammer.min.js"></script>
 </body>
 </html>
