fixed box color and lyric newlines

--- a/www/index.html
+++ b/www/index.html
@@ -71,8 +71,8 @@
 								<h3>Desiigner</h3>
 
 								<div class="lyrics">
-									<div time="200">Panda, panda, panda, panda, panda,</div>
-									<div time="500"><span class="boxcover" id="box2">-----</span></div>
+									<div time="200">Panda, panda, panda,</div>
+									<div time="500">panda, panda, <span class="boxcover" id="box2">-----</span>,</div>
 									<div time="600">panda, panda, panda.</div>
 								</div>
 
