--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
 								</span><br/>
 
 								<div class="progress-button">
-									<button id="button1" onclick="app.playSong('post/LushLifePost.mp3');$(this).parents('.cd-slider-content').trigger('swipeleft'); app.playSong('pre/PandaPre.mp3');
+									<button id="button1" onclick="fadeBox(1);app.playSong('post/LushLifePost.mp3');$(this).parents('.cd-slider-content').trigger('swipeleft'); app.playSong('pre/PandaPre.mp3');
 									"><span>Next</span></button>
 									<svg class="progress-circle" width="70" height="70"><path d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"/></svg>
 									<svg class="checkmark" width="70" height="70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg>
@@ -81,7 +81,7 @@
 								</span><br/>
 
 								<div class="progress-button">
-									<button onClick="fadeBox(2);"><span>Next</span></button>
+									<button onclick="fadeBox(2);"><span>Next</span></button>
 									<svg class="progress-circle" width="70" height="70"><path d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"/></svg>
 									<svg class="checkmark" width="70" height="70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg>
 									<svg class="cross" width="70" height="70"><path d="m35,35l-9.3,-9.3"/><path d="m35,35l9.3,9.3"/><path d="m35,35l-9.3,9.3"/><path d="m35,35l9.3,-9.3"/></svg>
@@ -110,7 +110,7 @@
 								</span><br/>
 
 								<div class="progress-button">
-									<button onClick="fadeBox(3);"><span>Next</span></button>
+									<button onclick="fadeBox(3);"><span>Next</span></button>
 									<svg class="progress-circle" width="70" height="70"><path d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"/></svg>
 									<svg class="checkmark" width="70" height="70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg>
 									<svg class="cross" width="70" height="70"><path d="m35,35l-9.3,-9.3"/><path d="m35,35l9.3,9.3"/><path d="m35,35l-9.3,9.3"/><path d="m35,35l9.3,-9.3"/></svg>
@@ -158,5 +158,24 @@
 		var nlform = new NLForm( document.getElementById( 'nl-form' ) );
 	</script>
 	<script src="js/hammer.min.js"></script>
+	<script>function fadeBox(x) {
+	console.log("HEHE");
+	//$("#box1").animate({backgroundColor: "Transparent"},300); 
+
+	 if (x == 1)
+	 	{
+	 		$('#box1').toggleClass('fadedBox');
+
+	 	};
+	 if (x == 2)
+	 	{
+	 		$('#box2').toggleClass('fadedBox');
+	 	};
+	 	if (x == 3)
+	 	{
+	 		$('#box3').toggleClass('fadedBox');
+	 	};
+	/*$(this).parents('.cd-slider-content').trigger('swipeleft'); app.playSong('pre/PandaPre.mp3'); */
+}</script>
 </body>
 </html>
