--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
 									<div time="700">So I gave it up</div>
 									<div time="800">No tricks no bluff</div>
 									<div time="3000">I’m just better off</div> 
-									<div> without them <span class="boxcover" id="box1">-----</span>.</div>
+									<div> without them <span class="boxcover">-----</span>.</div>
 								</div>
 
 								<span class="input input--hoshi" style="visibility: hidden">
@@ -52,8 +52,8 @@
 
 
 								<div class="progress-button" style="visibility: hidden">
-									<button onclick="app.playSong('post/LushLifePost.mp3'); $(this).parents('.cd-slider-content').trigger('swipeleft'); app.playSong('pre/PandaPre.mp3');"><span>Next</span></button>
-									
+									<button onclick="app.playPostSong(this);"><span>Next</span></button>
+
 									<svg class="progress-circle" width="70" height="70"><path d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"/></svg>
 									<svg class="checkmark" width="70" height="70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg>
 									<svg class="cross" width="70" height="70"><path d="m35,35l-9.3,-9.3"/><path d="m35,35l9.3,9.3"/><path d="m35,35l-9.3,9.3"/><path d="m35,35l9.3,-9.3"/></svg>
@@ -63,7 +63,7 @@
 					</li>
 
 					<li>
-						<div class="cd-slider-content">
+						<div class="cd-slider-content" song="Panda">
 
 							<div class="content-wrapper artist2">
 								<h2>Panda</h2>
@@ -71,18 +71,18 @@
 
 								<div class="lyrics">
 									<div time="200">Panda, panda, panda,</div>
-									<div time="500">panda, panda, <span class="boxcover" id="box2">-----</span>,</div>
+									<div time="500">panda, panda, <span class="boxcover">-----</span>,</div>
 									<div time="600">panda, panda, panda.</div>
 								</div>
 
 
-								<span class="input input--hoshi">
+								<span class="input input--hoshi" style="visibility: hidden">
 									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
-								<div class="progress-button">
-									<button onclick="fadeBox(2);"><span>Next</span></button>
+								<div class="progress-button" style="visibility: hidden">
+									<button onclick="app.playPostSong(this);"><span>Next</span></button>
 									<svg class="progress-circle" width="70" height="70"><path d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"/></svg>
 									<svg class="checkmark" width="70" height="70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg>
 									<svg class="cross" width="70" height="70"><path d="m35,35l-9.3,-9.3"/><path d="m35,35l9.3,9.3"/><path d="m35,35l-9.3,9.3"/><path d="m35,35l9.3,-9.3"/></svg>
@@ -101,7 +101,7 @@
 								<div class="lyrics">
 									<div>When I was a river dried up</div>
 									<div>You came to rain a flood</div>
-									<div>So <span class="boxcover" id="box3">-----</span>.</div>
+									<div>So <span class="boxcover">-----</span>.</div>
 								</div>
 								
 
