moved panda box

--- a/www/index.html
+++ b/www/index.html
@@ -72,8 +72,8 @@
 								<div class="lyrics">
 
 									<div time="3457">Panda, panda, panda,</div>
-									<div time="7633">panda, panda, <span class="boxcover">-----</span>,</div>
-									<div time="8871">panda, panda, panda.</div>
+									<div time="7633">panda, panda, panda,</div>
+									<div time="8871">panda, <span class="boxcover">-----</span>, panda.</div>
 
 								</div>
 
