--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
 								</div>
 
 								<span class="input input--hoshi" style="visibility: hidden">
-									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
+									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off"/>
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
@@ -79,7 +79,7 @@
 
 
 								<span class="input input--hoshi" style="visibility: hidden">
-									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
+									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off"/>
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
@@ -108,7 +108,7 @@
 								
 
 								<span class="input input--hoshi">
-									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
+									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off"/>
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
