--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -42,11 +42,11 @@
 									<div time="2465">So I gave it up</div>
 									<div time="5892">No tricks no bluff</div>
 									<div time="7420">I’m just better off</div> 
-									<div time="8526"> without them <span class="boxcover">-----</span>.</div>
+									<div time="8526"> without them <span class="boxcover">cuffs</span>.</div>
 								</div>
 
 								<span class="input input--hoshi" style="visibility: hidden">
-									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
+									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off"/>
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
@@ -73,13 +73,13 @@
 
 									<div time="3457">Panda, panda, panda,</div>
 									<div time="7633">panda, panda, panda,</div>
-									<div time="8871">panda, <span class="boxcover">-----</span>, panda.</div>
+									<div time="8871">panda, <span class="boxcover">panda</span>, panda.</div>
 
 								</div>
 
 
 								<span class="input input--hoshi" style="visibility: hidden">
-									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
+									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off"/>
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
@@ -103,12 +103,12 @@
 								<div class="lyrics">
 									<div time="210">When I was a river dried up</div>
 									<div time="5538">You came to rain a flood</div>
-									<div time="10672">So <span class="boxcover">-----</span>.</div>
+									<div time="10672">And said <span class="boxcover">drink from me</span>.</div>
 								</div>
 								
 
 								<span class="input input--hoshi">
-									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
+									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off"/>
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
