--- a/www/index.html
+++ b/www/index.html
@@ -101,9 +101,10 @@
 								<h3>Coldplay</h3>
 
 								<div class="lyrics">
-									<div time="210">When I was a river dried up</div>
+									<div time="210">When I was a</div>
+									<div time="3000">river dried up.</div>
 									<div time="5538">You came to rain a flood</div>
-									<div time="10672">And said <span class="boxcover">drink from me</span>.</div>
+									<div time="10672">and said <span class="boxcover">drink from me</span>.</div>
 								</div>
 								
 
