--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
 									<div time="2465">So I gave it up</div>
 									<div time="5892">No tricks no bluff</div>
 									<div time="7420">I’m just better off</div> 
-									<div time="8526"> without them<span class="boxcover">cuffs</span>.</div>
+									<div time="8526">without them <span class="boxcover">cuffs</span>.</div>
 								</div>
 
 								<span class="input input--hoshi" style="visibility: hidden">
@@ -73,7 +73,7 @@
 
 									<div time="3457">Panda, panda, panda,</div>
 									<div time="7633">panda, panda, panda,</div>
-									<div time="8871">panda, <span class="boxcover">panda</span>, panda.</div>
+									<div time="8871">panda, panda, <span class="boxcover">panda</span>.</div>
 
 								</div>
 
