--- a/www/index.html
+++ b/www/index.html
@@ -123,6 +123,17 @@
 						</div>
 					</li>
 
+					<li>
+						<div class="cd-slider-content" song="Coldplay">
+
+							<div class="content-wrapper artist4">
+								<h2>Nice!</h2>
+								<h3>Score: 10/15</h3>
+							</div>
+						</div>
+					</li>
+
+
 					
 				</ol> <!-- .sub-slides -->
 
