--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -124,7 +124,7 @@
 					</li>
 
 					<li>
-						<div class="cd-slider-content" song="Coldplay">
+						<div class="cd-slider-content">
 
 							<div class="content-wrapper artist4">
 								<h2>Nice!</h2>
