--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -108,12 +108,12 @@
 								</div>
 								
 
-								<span class="input input--hoshi">
+								<span class="input input--hoshi" style="visibility: hidden">
 									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" spellcheck="false" autocomplete="off" autocorrect="off" autocapitalize="off"/>
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
-								<div class="progress-button">
+								<div class="progress-button" style="visibility: hidden">
 									<button onclick="app.playPostSong(this);"><span>Next</span></button>
 									<svg class="progress-circle" width="70" height="70"><path d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"/></svg>
 									<svg class="checkmark" width="70" height="70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg>
