--- a/www/index.html
+++ b/www/index.html
@@ -125,10 +125,7 @@
 
 					<li>
 						<div class="cd-slider-content">
-
-							<div class="content-wrapper artist4">
-								<h2>Nice!</h2>
-								<h3>Score: 10/15</h3>
+							<div class="content-wrapper finale">
 							</div>
 						</div>
 					</li>
