--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -33,7 +33,7 @@
 				<ol class="sub-slides">
 					<li>
 						<div class="cd-slider-content" id="zara" song="LushLife">
-							<div class="content-wrapper artist1">
+							<div class="content-wrapper artist1" onclick="app.playPreSong($('#zara'));">
 								<h2>Lush Life</h2>
 								<h3>Zara Larsson</h3>
 
